# drone_auto

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone/share/drone/: local_setup.sh  package.sh  package.xml
install/my_shape_detector/lib/my_shape_detector/: shape_detection
install/my_shape_detector/share/my_shape_detector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/px4_msgs/share/px4_msgs/: package.sh
install/shape_info/share/shape_info/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/shape_info/share/shape_info/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_shape_info__rosidl_generator_cExport-noconfig.cmake  export_shape_info__rosidl_generator_cExport.cmake  export_shape_info__rosidl_generator_cppExport.cmake  export_shape_info__rosidl_generator_pyExport.cmake  export_shape_info__rosidl_typesupport_fastrtps_cExport.cmake  export_shape_info__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_shape_info__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  shape_infoConfig.cmake  (+3 more)
install/test_serial/lib/test_serial/: test_serial_node
install/test_serial/share/test_serial/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/drone/: CMakeLists.txt
src/drone/src/: drone_auto.cpp
src/test_serial/test_serial/: package.xml  setup.cfg  setup.py
src/test_serial/test_serial/test_serial/: test_serial_node.py
(+14 files in other folders)
